# humanitarianhackathon

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
datagathering/: Collect Open Apparel data.ipynb  Data C&A.ipynb  Data H&M Fiddling.ipynb  README.md  pyproject.toml
docs/: base.js  c_n_a.geo.json  h_n_m_locations.json  index.html
map/: bangladesh_basins.geo.json  base.js  c_n_a_locations.json  controls.js  data.json  h_n_m.geo.json  index.html  open_apparrel_locations.json  style.css
