[tool.poetry]
name = "maps"
version = "0.1.0"
description = ""
authors = ["Vladislav Supalov <yt@vsupalov.com>"]

[tool.poetry.dependencies]
python = "^3.7"
jupyter = "^1.0"
numpy = "^1.16"
pandas = "^0.24.2"
matplotlib = "^3.1"
seaborn = "^0.9.0"
pyshp = "^2.1"
requests = "^2.22"
beautifulsoup4 = "^4.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
